minijinja/tests/snapshots/test_compiler__codegen@filter.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"value\": \"foo bar baz\"\n}\n---\n{{ value|upper }}"
input_file: minijinja/tests/inputs/filter.txt
---
(
    [
        00000 | EmitRaw("{\n  \"value\": \"foo bar baz\"\n}\n---\n")  [line 1],
        00001 | Lookup("value")  [line 5],
        00002 | ApplyFilter("upper", 1, 0),
        00003 | Emit,
    ],
    {},
)
