minijinja/tests/snapshots/test_compiler__codegen@fragment_from_parent.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"var\": \"foo\"\n}\n---\n{% extends \"fragment_in_parent.txt\" %}\n{% block other %}\nShouldn't show up\n{% endblock %}"
input_file: minijinja/tests/fragment-inputs/fragment_from_parent.txt
---
(
    [
        00000 | EmitRaw("{\n  \"var\": \"foo\"\n}\n---\n")  [line 1],
        00001 | LoadConst("fragment_in_parent.txt")  [line 5],
        00002 | LoadBlocks,
        00003 | EmitRaw("\n"),
        00004 | CallBlock("other")  [line 6],
    ],
    {
        "other": [
            00000 | EmitRaw("\nShouldn't show up\n")  [line 6],
        ],
    },
)
