minijinja/tests/snapshots/test_compiler__codegen@fragment_simple_extend.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"var\": \"foo\"\n}\n---\n{% extends \"simple_layout.txt\" %}\n\n{% block fragment %}\nThis should appear\n{% endblock %}"
input_file: minijinja/tests/fragment-inputs/fragment_simple_extend.txt
---
(
    [
        00000 | EmitRaw("{\n  \"var\": \"foo\"\n}\n---\n")  [line 1],
        00001 | LoadConst("simple_layout.txt")  [line 5],
        00002 | LoadBlocks,
        00003 | EmitRaw("\n\n"),
        00004 | CallBlock("fragment")  [line 7],
    ],
    {
        "fragment": [
            00000 | EmitRaw("\nThis should appear\n")  [line 7],
        ],
    },
)
